# MoveSquare

./: .gitignore  CMakeLists.txt
src/: main.c  mainHeader.h
src/functions/: rect.c  sdlBasics.c
src/headers/: mainHeader.h  myStruct.h  rect.h  sdlBasics.h
